--- a/style.css
+++ b/style.css
@@ -5,36 +5,33 @@
     font-family: 'Sora', sans-serif;
 }
 body{
-    background: #E5EAF0;
-}
-main{
-
-    width: 1300px;
-    height: 800px;
     background: #FAFAF9;
-    display: flex;
-    margin: 80px auto;
+    width: 100vw;
+    height: 100vh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
+
 /* container */
 .container{
     display: flex;
     flex-direction: column;
     margin: auto;
-    width: 370px;
-    height: 385px;
-    padding: 10px 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 20px 20px 30px rgb(214, 214, 214);
 }
 
 .container img{
-    width: 370px;
+    width: 336px;
+    margin: 16px;
     border-radius: 10px;
 }
 
 .container .catagory{
-    margin: 10px 0;
+    margin:  16px;
+    margin-top: 0;
     padding: 5px 20px;
     font-size: 0.625rem;
     font-weight: 700;
@@ -46,16 +43,19 @@ main{
 
 .container .title{
     font-size: 1.125rem;
+    margin: 0 0 6px 16px;
 }
 
 .container .description{
     font-size: 0.75rem;
     width: 90%;
     color: #6C727F;
-    margin: 10px 0;
+    margin: 0 0 20px 16px;
+    width: 336px;
 }
 .container .author{
     font-size: 0.75rem;
-    padding: 30px 0;
+    
     color: #6C727F;
+    margin: 20px 0 20px 16px;
 }
